--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -1785,7 +1785,7 @@
 		[experimental.variant_selector.variants]
 			#The list of all variant types available for players to use. Values are treated as suffixes to block IDs for scanning.
 			#Prefix any variant type with ! to make it show up for Manual Variants but not be automatically scanned for. (e.g. '!polish')
-			"Variant Types" = ["slab", "stairs", "wall", "fence", "vertical_slab", "!unique", "!unique2", "!unique3"]
+			"Variant Types" = ["slab", "stairs", "wall", "fence", "vertical_slab", "unique", "unique2", "unique3"]
 			#By default, only a mod's namespace is scanned for variants for its items (e.g. if coolmod adds coolmod:fun_block, it'll search only for coolmod:fun_block_stairs).
 			# Mods in this list are also scanned for variants if none are found in itself (e.g. if quark is in the list and coolmod:fun_block_stairs doesn't exist, it'll try to look for quark:fun_block_stairs next)
 			"Tested Mods" = ["quark", "twilightforest", "v_slab_compat", "everycomp"]
