Don't use this.

--- a/config/NuclearCraft/materials.toml
+++ b/config/NuclearCraft/materials.toml
@@ -1,68 +1,68 @@
 
 [raw_chunks]
 	lithium = true
-	platinum = false
-	thorium = false
-	tin = false
+	platinum = true
+	thorium = true
+	tin = true
 	magnesium = true
-	silver = false
+	silver = true
 	cobalt = true
-	uranium = false
-	zinc = false
+	uranium = true
+	zinc = true
 	boron = true
-	lead = false
+	lead = true
 
 [ingots]
 	manganese_oxide = true
 	niobium_tin = true
 	graphite = true
 	lithium = true
-	platinum = false
-	tungsten = false
+	platinum = true
+	tungsten = true
 	zircaloy = true
 	yttrium = true
 	thermoconducting = true
 	thorium = true
 	zirconium_molybdenum = true
-	tin = false
+	tin = true
 	palladium = true
 	beryllium = true
 	silicon_carbide = true
-	zinc = false
+	zinc = true
 	carbon_manganese = true
 	extreme = true
 	shibuichi = true
 	tungsten_carbide = true
 	stainless_steel = true
 	magnesium = true
-	bronze = false
+	bronze = true
 	sodium = true
 	tin_silver = true
 	pyrolitic_carbon = true
 	manganese_dioxide = true
-	silver = false
-	uranium = false
+	silver = true
+	uranium = true
 	niobium_titanium = true
 	tough_alloy = true
-	steel = false
+	steel = true
 	potassium = true
 	ferroboron = true
 	titanium = true
 	super_alloy = true
 	cobalt = true
-	aluminum = false
+	aluminum = true
 	manganese = true
 	sic_sic_cmc = true
 	hard_carbon = true
 	niobium = true
 	zirconium = true
-	electrum = false
+	electrum = true
 	chromium = true
 	calcium = true
 	strontium = true
-	osmium = false
+	osmium = true
 	lithium_manganese_dioxide = true
-	lead = false
+	lead = true
 	osmiridium = true
 	lead_platinum = true
 	hsla_steel = true
@@ -74,69 +74,69 @@
 	neutronium = true
 
 [nuggets]
-	steel = false
-	electrum = false
+	steel = true
+	electrum = true
 	magnesium = true
 	cobalt = true
-	aluminum = false
-	lead = false
-	bronze = false
+	aluminum = true
+	lead = true
+	bronze = true
 	lithium = true
-	platinum = false
-	thorium = false
-	tin = false
+	platinum = true
+	thorium = true
+	tin = true
 	beryllium = true
-	silver = false
-	uranium = false
+	silver = true
+	uranium = true
 	zirconium = true
-	zinc = false
+	zinc = true
 	boron = true
 
 [plates]
 	tough_alloy = true
-	steel = false
+	steel = true
 	ferroboron = true
 	cobalt = true
-	aluminum = false
+	aluminum = true
 	graphite = true
 	manganese = true
 	sic_sic_cmc = true
 	netherite = true
 	lithium = true
-	platinum = false
+	platinum = true
 	thermoconducting = true
 	thorium = true
 	hard_carbon = true
-	tin = false
+	tin = true
 	palladium = true
-	copper = false
+	copper = true
 	beryllium = true
 	zirconium = true
-	zinc = false
+	zinc = true
 	extreme = true
-	electrum = false
+	electrum = true
 	magnesium = true
 	lithium_manganese_dioxide = true
-	lead = false
-	bronze = false
-	iron = false
-	silver = false
+	lead = true
+	bronze = true
+	iron = true
+	silver = true
 	hsla_steel = true
-	uranium = false
+	uranium = true
 	boron = true
 
 [dusts]
 	barium = true
 	germanium = true
-	tungsten = false
+	tungsten = true
 	zircaloy = true
 	yttrium = true
 	thermoconducting = true
 	thorium = true
 	zirconium_molybdenum = true
 	palladium = true
-	sulfur = false
-	fluorite = false
+	sulfur = true
+	fluorite = true
 	lapis = true
 	silicon_carbide = true
 	zinc = true
@@ -145,41 +145,41 @@
 	purpur = true
 	borax = true
 	magnesium = true
-	bronze = false
+	bronze = true
 	manganese_dioxide = true
-	silver = false
+	silver = true
 	boron_nitride = true
 	gadolinium = true
 	tough_alloy = true
-	steel = false
+	steel = true
 	ferroboron = true
 	cobalt = true
 	strontium_90 = true
 	potassium_hydroxide = true
 	alugentum = true
-	aluminum = false
+	aluminum = true
 	manganese = true
 	sic_sic_cmc = true
 	protactinium_233 = true
-	gold = false
+	gold = true
 	europium_155 = true
 	hard_carbon = true
 	end_stone = true
 	niobium = true
 	yellowcake = true
-	copper = false
+	copper = true
 	iodine = true
 	zirconium = true
-	electrum = false
+	electrum = true
 	caesium_137 = true
 	strontium = true
 	rhodochrosite = true
-	lead = false
+	lead = true
 	boron_arsenide = true
 	neodymium = true
 	lead_platinum = true
 	crystal_binder = true
-	charcoal = false
+	charcoal = true
 	hafnium = true
 	sodium_hydroxide = true
 	manganese_oxide = true
@@ -190,14 +190,14 @@
 	graphite = true
 	netherite = true
 	lithium = true
-	platinum = false
+	platinum = true
 	carobbiite = true
-	tin = false
+	tin = true
 	beryllium = true
 	ruthenium_106 = true
 	extreme = true
 	shibuichi = true
-	obsidian = false
+	obsidian = true
 	polonium = true
 	arsenic = true
 	energetic_blend = true
@@ -205,9 +205,9 @@
 	tin_silver = true
 	pyrolitic_carbon = true
 	potassium_fluoride = true
-	coal = false
-	uranium = false
-	emerald = false
+	coal = true
+	uranium = true
+	emerald = true
 	c_mn_blend = true
 	potassium = true
 	tbp = true
@@ -225,11 +225,11 @@
 	calcium = true
 	potassium_iodide = true
 	villiaumite = true
-	osmium = false
+	osmium = true
 	lithium_manganese_dioxide = true
-	quartz = false
-	diamond = false
-	iron = false
+	quartz = true
+	diamond = true
+	iron = true
 	hsla_steel = true
 	boron = true
 	bismuth = true
