--- a/config/everycomp-entries.toml
+++ b/config/everycomp-entries.toml
@@ -196,11 +196,6 @@
 		[types.leaves_type.dimdoors]
 			driftwood = true
 
-		[types.leaves_type.midnight]
-			shadowroot = true
-			dark_willow = true
-			manglewood = true
-
 		[types.leaves_type.hexcasting]
 			amethyst_edified = true
 			aventurine_edified = true
@@ -236,6 +231,15 @@
 
 		[types.leaves_type.totemic]
 			cedar = true
+
+		[types.leaves_type.hexalia]
+			cottonwood = true
+			willow = true
+
+		[types.leaves_type.enchanted]
+			alder = true
+			hawthorn = true
+			rowan = true
 
 	[types.wood_type]
 
@@ -344,17 +348,6 @@
 		[types.wood_type.dimdoors]
 			driftwood = true
 
-		[types.wood_type.midnight]
-			shadowroot = true
-			dark_willow = true
-			decayed = true
-			manglewood = true
-			nightshroom = true
-			dewshroom = true
-			viridshroom = true
-			moonshroom = true
-			bogshroom = true
-
 		[types.wood_type.iceandfire]
 			dreadwood = true
 
@@ -370,9 +363,6 @@
 
 		[types.wood_type.caverns_and_chasms]
 			azalea = true
-
-		[types.wood_type.endergetic]
-			poise = true
 
 		[types.wood_type.upgrade_aquatic]
 			driftwood = true
@@ -396,6 +386,18 @@
 
 		[types.wood_type.sullysmod]
 			petrified = true
+
+		[types.wood_type.hexalia]
+			cottonwood = true
+			willow = true
+
+		[types.wood_type.enchanted]
+			alder = true
+			hawthorn = true
+			rowan = true
+
+		[types.wood_type.endergetic]
+			poise = true
 
 	[types.cut_block_type]
 
@@ -1221,28 +1223,6 @@
 			cut_ancient_sandstone = true
 			ancient_sandstone = true
 
-		[types.cut_block_type.midnight]
-			nightstone = true
-			polished_nightstone = true
-			nightstone_brick = true
-			nightstone_tile = true
-			trenchstone = true
-			trenchstone_brick = true
-			shadowroot = true
-			dark_willow = true
-			decayed_wood = true
-			manglewood = true
-			nightshroom = true
-			dewshroom = true
-			viridshroom = true
-			moonshroom = true
-			bogshroom = true
-			rockshroom_brick = true
-			polished_rouxe = true
-			rouxe_brick = true
-			polished_bloomcrystal = true
-			bloomcrystal_brick = true
-
 		[types.cut_block_type.iceandfire]
 			dread_stone = true
 
@@ -1330,10 +1310,6 @@
 			green_terracotta_brick = true
 			red_terracotta_brick = true
 			black_terracotta_brick = true
-
-		[types.cut_block_type.endergetic]
-			poise = true
-			eumus_brick = true
 
 		[types.cut_block_type.upgrade_aquatic]
 			beachgrass_thatch = true
@@ -1445,139 +1421,21 @@
 			phosphorite_brick = true
 			asgharian_brick = true
 
-	[types.stone_type]
+		[types.cut_block_type.hexalia]
+			cottonwood = true
+			willow = true
 
-		[types.stone_type.galosphere]
-			pink_salt = true
-			rose_pink_salt = true
-			pastel_pink_salt = true
+		[types.cut_block_type.goated]
+			thatch = true
 
-		[types.stone_type.create]
-			limestone = true
-			asurine = true
-			crimsite = true
-			ochrum = true
-			veridium = true
-			scoria = true
-			scorchia = true
+		[types.cut_block_type.enchanted]
+			alder = true
+			hawthorn = true
+			rowan = true
 
-		[types.stone_type.aether_redux]
-			sentrite = true
-			divinite = true
-			driftshale = true
-
-		[types.stone_type.deep_aether]
-			clorite = true
-			raw_clorite = true
-			aseterite = true
-			nimbus_stone = true
-
-		[types.stone_type.alexscaves]
-			galena = true
-			radrock = true
-			abyssmarine = true
-			guanostone = true
-			limestone = true
-
-		[types.stone_type.ars_nouveau]
-			sourcestone = true
-
-		[types.stone_type.quark]
-			soul_sandstone = true
-			limestone = true
-			jasper = true
-			shale = true
-			myalite = true
-			permafrost = true
-
-		[types.stone_type.spelunkery]
-			nephrite = true
-
-		[types.stone_type.botania]
-			livingrock = true
-			shimmerrock = true
-
-		[types.stone_type.midnight]
-			nightstone = true
-			trenchstone = true
-			rockshroom = true
-
-		[types.stone_type.tropicraft]
-			chunk = true
-
-		[types.stone_type.blue_skies]
-			taratite = true
-			rimestone = true
-			umber = true
-			cinderstone = true
-			blinding_stone = true
-			nature_stone = true
-			poison_stone = true
-			aquatic_stone = true
-			life_stone = true
-			turquoise_stone = true
-			lunar_stone = true
-
-		[types.stone_type.aether]
-			holystone = true
-			carved_stone = true
-			angelic_stone = true
-			hellfire_stone = true
-
-		[types.stone_type.lost_aether_content]
-			gale_stone = true
-
-		[types.stone_type.ancient_aether]
-			aerogetic_stone = true
-
-		[types.stone_type.deeperdarker]
-			sculk_stone = true
-			gloomslate = true
-
-		[types.stone_type.undergarden]
-			depthrock = true
-			shiverstone = true
-			tremblecrust = true
-
-		[types.stone_type.hexcasting]
-			slate = true
-
-		[types.stone_type.tfmg]
-			concrete = true
-			asphalt = true
-
-		[types.stone_type.wizards_reborn]
-			wisestone = true
-
-		[types.stone_type.rubinated_nether]
-			altar_stone = true
-
-		[types.stone_type.forbidden_arcanus]
-			darkstone = true
-
-		[types.stone_type.caverns_and_chasms]
-			sugilite = true
-
-		[types.stone_type.upgrade_aquatic]
-			coralstone = true
-
-		[types.stone_type.twilightforest]
-			mazestone = true
-			deadrock = true
-
-		[types.stone_type.lunarnether]
-			lunar_stone = true
-
-		[types.stone_type.scguns]
-			phosphorite = true
-
-	[types.mud_type]
-
-		[types.mud_type.deeperdarker]
-			sculk_grime = true
-
-		[types.mud_type.deep_aether]
-			aether_mud = true
+		[types.cut_block_type.endergetic]
+			poise = true
+			eumus_brick = true
 
 #Disables specific entries
 [entries]
@@ -1766,112 +1624,4 @@
 			hollow_log_climbable = true
 			hollow_log_horizontal = true
 			hollow_log_vertical = true
-
-	[entries.stone_type]
-
-		[entries.stone_type.chipped]
-			tiled_column = true
-			pillar = true
-			checkered_tiles = true
-			cracked_flat_tiles = true
-			eroded = true
-			weathered = true
-			tiled_bordered = true
-			simple_pillar = true
-			scales = true
-			smooth_column = true
-			vertical_disordered_bricks = true
-			fine_pillar = true
-			sad = true
-			brick_bordered = true
-			glad = true
-			smooth_inlayed = true
-			unamused = true
-			bordered = true
-			cut_column = true
-			edged_bricks = true
-			cobbled = true
-			smoothed_double_inlayed = true
-			rounded_bricks = true
-			overlapping_tiles = true
-			pillar_top = true
-			rough = true
-			tiny_layered_bricks = true
-			loded = true
-			bricks = true
-			massive_bricks = true
-			layed_bricks = true
-			spider_carving = true
-			thick_inlayed = true
-			tiny_brick_bordered = true
-			pointed_dripstone = true
-			sanded = true
-			engraved = true
-			offset_bricks = true
-			small_bricks = true
-			duh = true
-			mini_tiles = true
-			angry = true
-			vertical_cut = true
-			crying = true
-			smooth_ringed = true
-			runic_carved = true
-			curly_pillar = true
-			etched_bricks = true
-			stacked_bricks = true
-			spiraled = true
-			inscribed = true
-			polished = true
-			cut_blank = true
-			blank_carving = true
-			prismal_remnants = true
-			tiny_layered_slabs = true
-			tiny_bricks = true
-			flat_tiles = true
-			inlayed = true
-			trodden = true
-			tiled = true
-			creeper_carving = true
-			cracked_bricks = true
-			pillar_bricks = true
-			cracked_disordered_bricks = true
-			carved = true
-			ornate_pillar = true
-
-		[entries.stone_type.create]
-			cut_wall = true
-			small_bricks = true
-			layered = true
-			cut_brick_wall = true
-			pillar = true
-			cut_brick_stairs = true
-			cut_brick_slab = true
-			polished_cut_slab = true
-			polished_cut_wall = true
-			cut_slab = true
-			small_brick_wall = true
-			cut = true
-			polished_cut = true
-			small_brick_slab = true
-			cut_stairs = true
-			small_brick_stairs = true
-			cut_bricks = true
-			polished_cut_stairs = true
-
-		[entries.stone_type.quark]
-			polished_vertical_slab = true
-			pillar = true
-			vertical_slab = true
-
-	[entries.mud_type]
-
-		[entries.mud_type.quark]
-			carved_bricks = true
-			pillar = true
-			brick_lattice = true
-
-		[entries.mud_type.betterarcheology]
-			cracked_brick_stairs = true
-			cracked_bricks = true
-			cracked_brick_slab = true
 
