--- a/config/spelunkery-common.toml
+++ b/config/spelunkery-common.toml
@@ -36,7 +36,7 @@
 	piglins_give_crying_obsidian = true
 	dimensional_tears_from_crying_obsidian = false
 	dimensional_tears_from_respawn_anchor = true
-	portal_fluid_ocean = true
+	portal_fluid_ocean = false
 	end_ocean_bucketable = false
 
 [slimes]
