--- a/config/map_atlases-client.toml
+++ b/config/map_atlases-client.toml
@@ -14,7 +14,7 @@
 	zoom_multiplier = 1.0
 	#Controls anchor position of mini-map
 	#Allowed Values: UPPER_LEFT, UPPER_RIGHT, LOWER_LEFT, LOWER_RIGHT
-	anchoring = "UPPER_LEFT"
+	anchoring = "UPPER_RIGHT"
 	#An integer which will offset the mini-map horizontally
 	#Range: -4000 ~ 4000
 	horizontal_offset = 0
@@ -25,7 +25,7 @@
 	#Range: -4000 ~ 4000
 	active_potion_effects_vertical_offset = 26
 	#When enabled, the player's current Coords will be displayed
-	coordinate_text = true
+	coordinate_text = false
 	#Displays chunk coordinates
 	chunk_coordinate_text = false
 	#When enabled, the player's current Biome will be displayed
@@ -66,7 +66,7 @@
 [world_map]
 	crossair = false
 	#Use bigger book like texture for worldmap view. Makes the view a bit bigger. Recommended to ebe used with map scale 1 (you might want to lower lectern one too if buttons dont show)
-	alternative_texture = false
+	alternative_texture = true
 	#Pan smoothly. When off it will pan in map increments instead
 	smooth_panning = true
 	#Makes zooming work smoothly instead of in 2 maps increments
@@ -75,14 +75,14 @@
 	zoom_scroll_speed = 1.0
 	#Global scale of the entire world map GUI. Keep at 1 for pixel perfect consistency
 	#Range: 0.0 ~ 20.0
-	scale = 1.25
+	scale = 1.0
 	#Global scale of the entire world map GUI when opening from lectern. Keep at 1 for pixel perfect consistency
 	#Range: 0.0 ~ 20.0
 	lectern_scale = 1.0
 	#Shows map separation borders
 	map_borders = true
 	#When enabled, the Atlas world map coordinates will be displayed
-	draw_coordinates = true
+	draw_coordinates = false
 	#Sets the scale of the text rendered for Coords world-map data
 	#Range: 0.0 ~ 10.0
 	coordinates_scale = 1.0
