re-enable quark sort

--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -286,7 +286,7 @@
 	"Easy Transfering" = true
 	"Expanded Item Interactions" = true
 	"Hotbar Changer" = true
-	"Inventory Sorting" = false
+	"Inventory Sorting" = true
 	"Item Sharing" = true
 	"Quick Armor Swapping" = true
 
