--- a/config/everycomp-entries.toml
+++ b/config/everycomp-entries.toml
@@ -246,6 +246,11 @@
 			dark_willow = true
 			manglewood = true
 
+		[types.leaves_type.solarcraft]
+			ash = true
+			runic = true
+			radiant = true
+
 	[types.wood_type]
 
 		[types.wood_type.mynethersdelight]
@@ -414,6 +419,10 @@
 			viridshroom = true
 			moonshroom = true
 			bogshroom = true
+
+		[types.wood_type.solarcraft]
+			runic = true
+			radiant = true
 
 	[types.cut_block_type]
 
@@ -1480,137 +1489,16 @@
 			polished_glance = true
 			glance_brick = true
 
-	[types.stone_type]
+		[types.cut_block_type.solarcraft]
+			solar_stone = true
+			runic = true
+			radiant = true
+			magistone = true
 
-		[types.stone_type.twilightforest]
-			deadrock = true
-			mazestone = true
-
-		[types.stone_type.galosphere]
-			pink_salt = true
-			rose_pink_salt = true
-			pastel_pink_salt = true
-
-		[types.stone_type.create]
-			limestone = true
-			asurine = true
-			crimsite = true
-			ochrum = true
-			veridium = true
-			scoria = true
-			scorchia = true
-
-		[types.stone_type.aether_redux]
-			driftshale = true
-			sentrite = true
-
-		[types.stone_type.deep_aether]
-			clorite = true
-			raw_clorite = true
-			aseterite = true
-
-		[types.stone_type.quark]
-			soul_sandstone = true
-			limestone = true
-			jasper = true
-			shale = true
-			myalite = true
-			permafrost = true
-
-		[types.stone_type.botania]
-			livingrock = true
-
-		[types.stone_type.securitycraft]
-			reinforced_stone = true
-
-		[types.stone_type.lunarnether]
-			lunar_stone = true
-
-		[types.stone_type.absentbydesign]
-			gate_stone = true
-			trapdoor_stone = true
-
-		[types.stone_type.undergarden]
-			depthrock = true
-			shiverstone = true
-			tremblecrust = true
-
-		[types.stone_type.rubinated_nether]
-			altar_stone = true
-
-		[types.stone_type.spelunkery]
-			nephrite = true
-
-		[types.stone_type.scguns]
-			phosphorite = true
-
-		[types.stone_type.wizards_reborn]
-			wisestone = true
-
-		[types.stone_type.pneumaticcraft]
-			reinforced_stone = true
-			compressed_stone = true
-
-		[types.stone_type.midnight]
-			nightstone = true
-			trenchstone = true
-			rockshroom = true
-			rouxe = true
-			bloomcrystal = true
-
-		[types.stone_type.blue_skies]
-			taratite = true
-			rimestone = true
-			umber = true
-			cinderstone = true
-
-		[types.stone_type.ars_nouveau]
-			sconce = true
-
-		[types.stone_type.aether]
-			holystone = true
-
-		[types.stone_type.iceandfire]
-			dread_stone = true
-
-		[types.stone_type.deeperdarker]
-			sculk_stone = true
-			gloomslate = true
-
-		[types.stone_type.sullysmod]
-			amber = true
-
-		[types.stone_type.endergetic]
-			eumus = true
-
-		[types.stone_type.caverns_and_chasms]
-			sugilite = true
-
-		[types.stone_type.hexcasting]
-			slate = true
-
-		[types.stone_type.alexscaves]
-			galena = true
-			radrock = true
-			abyssmarine = true
-			guanostone = true
-
-		[types.stone_type.oreganized]
-			glance = true
-
-		[types.stone_type.forbidden_arcanus]
-			darkstone = true
-
-	[types.mud_type]
-
-		[types.mud_type.deeperdarker]
-			sculk_grime = true
-
-		[types.mud_type.securitycraft]
-			reinforced_mud = true
-
-		[types.mud_type.deep_aether]
-			aether_mud = true
+		[types.cut_block_type.cosmopolitan]
+			birch_cookie_tile = true
+			herbal_cookie_tile = true
+			paw_cookie_tile = true
 
 #Disables specific entries
 [entries]
@@ -1805,111 +1693,9 @@
 			connect_four = true
 			chess = true
 
-	[entries.stone_type]
-
-		[entries.stone_type.chipped]
-			tiled_column = true
-			pillar = true
-			checkered_tiles = true
-			cracked_flat_tiles = true
-			eroded = true
-			weathered = true
-			tiled_bordered = true
-			simple_pillar = true
-			scales = true
-			smooth_column = true
-			vertical_disordered_bricks = true
-			fine_pillar = true
-			sad = true
-			brick_bordered = true
-			glad = true
-			smooth_inlayed = true
-			unamused = true
-			bordered = true
-			cut_column = true
-			edged_bricks = true
-			cobbled = true
-			smoothed_double_inlayed = true
-			rounded_bricks = true
-			overlapping_tiles = true
-			pillar_top = true
-			rough = true
-			tiny_layered_bricks = true
-			loded = true
-			bricks = true
-			massive_bricks = true
-			layed_bricks = true
-			spider_carving = true
-			thick_inlayed = true
-			tiny_brick_bordered = true
-			pointed_dripstone = true
-			sanded = true
-			engraved = true
-			offset_bricks = true
-			small_bricks = true
-			duh = true
-			mini_tiles = true
-			angry = true
-			vertical_cut = true
-			crying = true
-			smooth_ringed = true
-			runic_carved = true
-			curly_pillar = true
-			etched_bricks = true
-			stacked_bricks = true
-			spiraled = true
-			inscribed = true
-			polished = true
-			cut_blank = true
-			blank_carving = true
-			prismal_remnants = true
-			tiny_layered_slabs = true
-			tiny_bricks = true
-			flat_tiles = true
-			inlayed = true
-			trodden = true
-			tiled = true
-			creeper_carving = true
-			cracked_bricks = true
-			pillar_bricks = true
-			cracked_disordered_bricks = true
-			carved = true
-			ornate_pillar = true
-
-		[entries.stone_type.create]
-			cut_wall = true
-			small_bricks = true
-			layered = true
-			cut_brick_wall = true
-			pillar = true
-			cut_brick_stairs = true
-			cut_brick_slab = true
-			polished_cut_slab = true
-			polished_cut_wall = true
-			cut_slab = true
-			small_brick_wall = true
-			cut = true
-			polished_cut = true
-			small_brick_slab = true
-			cut_stairs = true
-			small_brick_stairs = true
-			cut_bricks = true
-			polished_cut_stairs = true
-
-		[entries.stone_type.quark]
-			polished_vertical_slab = true
-			pillar = true
-			vertical_slab = true
-
-	[entries.mud_type]
-
-		[entries.mud_type.quark]
-			carved_bricks = true
-			pillar = true
-			brick_lattice = true
-
-		[entries.mud_type.betterarcheology]
-			cracked_brick_stairs = true
-			cracked_bricks = true
-			cracked_brick_slab = true
+		[entries.wood_type.decorative_blocks]
+			seat = true
+			palisade = true
+			beam = true
+			support = true
 
